--- a/static/redirect.css
+++ b/static/redirect.css
@@ -10,9 +10,10 @@
 
 #epiccat{
     height:70%;
-    width:auto;
-    margin:auto;
-    margin-top:100px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     animation: epiccat 1s ease 2s 1 normal forwards;
     box-shadow: 15px 17px 26px rgb(41, 41, 41,0.6);
     border-radius:1.5%;
