--- a/static/redirect.css
+++ b/static/redirect.css
@@ -3,13 +3,7 @@ background-color: #0d1117;
 }
 
 #cat{
-    height:70%;
-    width:auto;
-    margin:auto;
-    margin-top:100px;
     animation: rotateAnimation 2s linear infinite;
-    box-shadow: 15px 17px 26px rgb(41, 41, 41,0.6);
-    border-radius:1.5%;
 }
 
 #epiccat{
@@ -21,6 +15,10 @@ background-color: #0d1117;
     animation: epiccat 1s ease 2s 1 normal forwards;
     box-shadow: 15px 17px 26px rgb(41, 41, 41,0.6);
     border-radius:1.5%;
+}
+
+@keyframes rotateAnimation {
+to {transform: rotateY(360deg);}
 }
 
 @keyframes epiccat {
