--- a/static/redirect.css
+++ b/static/redirect.css
@@ -2,34 +2,7 @@ body {
 background-color: #0d1117;
 }
 
-#epiccat{
-    height:70%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    animation: epiccat 1s ease 2s 1 normal forwards;
-    box-shadow: 15px 17px 26px rgb(41, 41, 41,0.6);
-    border-radius:1.5%;
-}
-
-@keyframes epiccat {
-	0% {
-		opacity: 1;
-		transform: rotate(0) scale(1);
-		transform-origin: 50% 0;
-	}
-
-	100% {
-		opacity: 0;
-		transform: rotate(-540deg) scale(0);
-		transform-origin: 50% 0;
-	}
-}
-
 /* body{
     perspective: 1500px;
 }
-@keyframes rotateAnimation {
-to {transform: rotateY(360deg);}
-} */
+*/
