--- a/static/main.css
+++ b/static/main.css
@@ -28,7 +28,8 @@
     transition-duration: 50ms;
 }
 html,body{
-    height: 100%;
+    height: 100%; 
+    padding: 0px; 
     margin: 0px;
     overflow:hidden;
 }
