--- a/team/style.css
+++ b/team/style.css
@@ -1,13 +1,16 @@
-@import url(//db.onlinewebfonts.com/c/a23fd1a5799a0d5b328877750131ba1f?family=Ruji%27s+Handwriting+Font+v.2.0);
+@font-face {
+  font-family: 'AhMyBelovedHandwritingFont';
+  src: url('ruji.otf') format('otf');
+}
 
 @font-face {
   font-family: 'ChirpBold';
-  src:  url('//abs.twimg.com/responsive-web/client-web/Chirp-Bold.ebb56aba.woff2') format('woff2')
+  src:  url('static/chirpbold.ttf') format('ttf')
 }
 
 @font-face {
   font-family: 'Chirp';
-  src:  url('//abs.twimg.com/responsive-web/client-web/Chirp-Regular.80fda27a.woff2') format('woff2')
+  src:  url('static/chirp.ttf') format('ttf')
 }
 
 @-webkit-keyframes shake {
@@ -121,7 +124,7 @@ body::-webkit-scrollbar {
 
 h1 {
   color: #ffffff;
-  font-family: "Ruji's Handwriting Font v.2.0", sans-serif;
+  font-family: "AhMyBelovedHandwritingFont", sans-serif;
   -webkit-animation-name: shake;
   -webkit-animation-duration: 0.5s;
   -webkit-transform-origin:50% 50%;
@@ -138,8 +141,8 @@ h1 {
 .fakemarqueetext {
 	position: absolute;
 	animation: shakefix 0.5s linear infinite;
-	font-family: "Ruji's Handwriting Font v.2.0", sans-serif;
-	//font-size: 10px;
+	font-family: "AhMyBelovedHandwritingFont", sans-serif;
+	font-size: 10px;
 	color: #ffffff;
 	text-shadow: -4px -4px 0 #000000, 4px -4px 0 #000000, -4px 4px 0 #000000, 4px 4px 0 #000000;
 }
@@ -163,7 +166,7 @@ h1 {
   font-weight: bold;
   text-align: center;
   text-shadow: 0px 0px 10px #6b6b6a;
-  font-family: "Ruji's Handwriting Font v.2.0", sans-serif;
+  font-family: "AhMyBelovedHandwritingFont", sans-serif;
   cursor: pointer;
 }
 
