--- a/static/main.css
+++ b/static/main.css
@@ -1,105 +1,122 @@
-#circlebtn{
-    width:60px;
-    height:60px;
+html, body {
+    height: 100%; 
+    padding: 0px; 
+    margin: 0px;
+    overflow: hidden;
+    overflow-x: hidden;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: radial-gradient(circle, rgba(86,197,199,1) 0%, rgba(255,239,185,1) 30%, 
+                rgba(188,144,201,1) 53%, rgba(255,154,154,1) 78%, rgba(255,204,95,1) 100%);
+}
+
+/* a (hopefully) working fix for mobile.. nest hub and similar are still broken asf */
+@media screen and (max-width: 480px) {
+    #sidemenu {max-width: 80%; overflow-x: hidden}
+    #circlebtn {right: 5px; bottom: 5px}
+}
+
+#soggycat {
+    width: auto;
+    max-width: 75%;
+    height: auto;
+    max-height: 75%;
+    box-shadow: 15px 15px 25px rgb(41, 41, 41, 0.25);
+    border-radius: 1.5%;
+}
+
+/* ############################### */
+
+#circlebtn {
+    width: 30px;
+    height: 30px;
     border-radius: 30px;
     border-style: none;
-    background-color: rgba(255,255,255, 0.36);
-    position:absolute;
-    right:20px;
-    bottom:20px;
-    box-shadow: 8px 9px 21px rgb(41, 41, 41,0.65);
+    background-color: rgba(255,255,255, 0.25);
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    box-shadow: 7px 7px 20px rgb(41, 41, 41, 0.25);
     -webkit-backdrop-filter: blur(7px);
     backdrop-filter: blur(7px);
     cursor: pointer;
 }
-#circlebtn:hover{
+
+#circlebtn:hover {
     background-color: rgba(255,255,255, 0.5);
-    width:65px;
-    height:65px;
-    right:17px;
-    bottom:17px;
+    width: 35px;
+    height: 35px;
     border-radius: 32px;
-    box-shadow: 15px 17px 26px rgb(41, 41, 41,0.6);
     transition-duration: 230ms;
 }
-#circlebtn:active{
-    transform: translateY(10px);
+
+#circlebtn:active {
+    transform: translateY(5px);
     background-color: rgba(255,255,255, 0.25);
     transition-duration: 50ms;
 }
-html,body{
-    height: 100%; 
-    padding: 0px; 
-    margin: 0px;
-    overflow:hidden;
-}
-body{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    background: radial-gradient(circle, rgba(86,197,199,1) 0%, rgba(255,239,185,1) 30%, rgba(188,144,201,1) 53%, rgba(255,154,154,1) 78%, rgba(255,204,95,1) 100%);
-    background-attachment: fixed;
-}
-#soggycat{
-    width:auto;
-    height:82%;
-    box-shadow: 15px 17px 26px rgb(41, 41, 41,0.6);
-    border-radius: 1.5%;
-}
-#sidemenu{
+
+/* ############################### */
+
+#sidemenu {
     padding-top: 10px;
-    width:0px;
-    border-top-left-radius: 30px;
-    border-bottom-left-radius: 30px;
+    width: 0px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
     position:absolute;
-    right:0;
-    bottom: 100px;
-    transition: width 500ms, background-color 200ms, padding 200ms, bottom 200ms;
-    box-shadow: 8px 9px 22px rgb(41, 41, 41,0.65);
-    -webkit-backdrop-filter: blur(7px);
-    backdrop-filter: blur(7px);
+    right: 0;
+    bottom: 65px;
+    transition: width 600ms, background-color 200ms, padding 200ms, bottom 200ms;
+    box-shadow: 15px 15px 25px rgb(41, 41, 41, 0.25);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
     background-color: rgba(255,255,255, 0.16);
-    display:flex;
+    display: flex;
     flex-direction: column;
 }
-#sidemenu:hover{
+
+/* #sidemenu:hover {
     background-color: rgba(255,255,255, 0.27);
     box-shadow: 15px 17px 27px rgb(41, 41, 41,0.6);
-    padding-top:15px;
-    padding-bottom:5px;
-    bottom: 95px;
-}
-.menubuttonsa{
-    margin:10px;
+    padding-top: 15px;
+    padding-bottom: 5px;
+    bottom: 80px;
+} */
+
+/* ############################### */
+
+.menubuttonsa {
+    margin: 5px;
     margin-top: 0px;
-    margin-right:0px;
-    border-top-left-radius:30px;
-    border-bottom-left-radius:30px;
+    margin-right: 0px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
     text-decoration: none;
-    color:black;
+    color: black;
 }
-.menubuttons{
+
+.menubuttons {
     font-family: 'Spline Sans Mono', monospace;
-    height:90px;
+    height: 50px;
     background-color: white;
-    font-size:30px;
-    border-top-left-radius:30px;
-    border-bottom-left-radius:30px;
+    font-size: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
     transition-duration: 200ms;
-    display:flex;
-    align-items:center;
-    white-space:nowrap;
+    display: flex;
+    align-items: center;
+    white-space: nowrap;
 }
-.menubuttons:hover{
-    height:100px;
-    font-size: 31px;
-}
-.menubuttons:hover img{
-    height: 60px;
-    margin: 11px;
-}
-.menubuttons img{
-    height:50px;
-    margin:16px;
-    transition-duration: 200ms;
-}
+
+.menubuttons:hover {height: 55px; font-size: 25px}
+.menubuttons img {width: 25px; margin: 10px; transition-duration: 200ms}
+.menubuttons:hover img {width: 30px; margin: 11px}
+
+.small {height: 30px; font-size: 15px}
+.small:hover {height: 32.5px; font-size: 17.5px}
+.small img {width: 15px}
+.small:hover img {width: 17.5px}
