--- a/team/index.css
+++ b/team/index.css
@@ -1,139 +1,139 @@
 @font-face {
-  font-family: 'RujisHandwritingFontv20Medium';
-      src: url('//soggy.cat/static/other/ruji.ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
+	font-family: 'RujisHandwritingFontv20Medium';
+	src: url('//soggy.cat/static/other/ruji.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
 }
 
 @font-face {
-  font-family: 'ChirpBold';
-  src:  url('//soggy.cat/static/other/chirp.ttf');
+	font-family: 'ChirpBold';
+	src: url('//soggy.cat/static/other/chirp.ttf');
 }
 
 @font-face {
-  font-family: 'Chirp';
-  src:  url('//soggy.cat/static/other/chirpbold.ttf');
+	font-family: 'Chirp';
+	src: url('//soggy.cat/static/other/chirpbold.ttf');
 }
 
 @keyframes shake {
-    0% { transform: translate(2px, 1px) rotate(0deg); } 
-    10% { transform: translate(-1px, -2px) rotate(-1deg); }
-    20% { transform: translate(-3px, 0px) rotate(1deg); }
-    30% { transform: translate(0px, 2px) rotate(0deg); }
-    40% { transform: translate(1px, -1px) rotate(1deg); }
-    50% { transform: translate(-1px, 2px) rotate(-1deg); }
-    60% { transform: translate(-3px, 1px) rotate(0deg); }
-    70% { transform: translate(2px, 1px) rotate(-1deg); }
-    80% { transform: translate(-1px, -1px) rotate(1deg); }
-    90% { transform: translate(2px, 2px) rotate(0deg); }
-    100% { transform: translate(1px, -2px) rotate(-1deg); }
+	0% { transform: translate(2px, 1px) rotate(0deg); } 
+	10% { transform: translate(-1px, -2px) rotate(-1deg); }
+	20% { transform: translate(-3px, 0px) rotate(1deg); }
+	30% { transform: translate(0px, 2px) rotate(0deg); }
+	40% { transform: translate(1px, -1px) rotate(1deg); }
+	50% { transform: translate(-1px, 2px) rotate(-1deg); }
+	60% { transform: translate(-3px, 1px) rotate(0deg); }
+	70% { transform: translate(2px, 1px) rotate(-1deg); }
+	80% { transform: translate(-1px, -1px) rotate(1deg); }
+	90% { transform: translate(2px, 2px) rotate(0deg); }
+	100% { transform: translate(1px, -2px) rotate(-1deg); }
 }
 
 @keyframes animStar {
-  from {
-    transform: translateY(-500px);
-  }
-  to {
-    transform: translateY(-1500px);
-  }
+	from {
+		transform: translateY(-500px);
+	}
+	to {
+		transform: translateY(-1500px);
+	}
 }
 
 @keyframes shakefix {
-    0% { transform: translate(2px, 1px) rotate(0deg); } 
-    10% { transform: translate(-1px, -2px) rotate(-0.1deg); }
-    20% { transform: translate(-3px, 0px) rotate(0.1deg); }
-    30% { transform: translate(0px, 2px) rotate(0deg); }
-    40% { transform: translate(1px, -1px) rotate(0.1deg); }
-    50% { transform: translate(-1px, 2px) rotate(-0.1deg); }
-    60% { transform: translate(-3px, 1px) rotate(0deg); }
-    70% { transform: translate(2px, 1px) rotate(-0.1deg); }
-    80% { transform: translate(-1px, -1px) rotate(0.1deg); }
-    90% { transform: translate(2px, 2px) rotate(0deg); }
-    100% { transform: translate(1px, -2px) rotate(-0.1deg); }
+	0% { transform: translate(2px, 1px) rotate(0deg); } 
+	10% { transform: translate(-1px, -2px) rotate(-0.1deg); }
+	20% { transform: translate(-3px, 0px) rotate(0.1deg); }
+	30% { transform: translate(0px, 2px) rotate(0deg); }
+	40% { transform: translate(1px, -1px) rotate(0.1deg); }
+	50% { transform: translate(-1px, 2px) rotate(-0.1deg); }
+	60% { transform: translate(-3px, 1px) rotate(0deg); }
+	70% { transform: translate(2px, 1px) rotate(-0.1deg); }
+	80% { transform: translate(-1px, -1px) rotate(0.1deg); }
+	90% { transform: translate(2px, 2px) rotate(0deg); }
+	100% { transform: translate(1px, -2px) rotate(-0.1deg); }
 }
 
 @keyframes undeprecatethatmarquee {
-  0% {
-    transform: translate(2100px, 0px) ;
-  }
-  100% {
-    transform: translate(-7650px, 0px) ;
-  }
+	0% {
+		transform: translate(2100px, 0px) ;
+	}
+	100% {
+		transform: translate(-7650px, 0px) ;
+	}
 }
 
 @keyframes slide{
-  0% {
-    transform: translate(0, 0);
-  }
-  100% {
-    transform: translate(-114px, 0);
-  }
+	0% {
+		transform: translate(0, 0);
+	}
+	100% {
+		transform: translate(-114px, 0);
+	}
 }
 
 @keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+	from {opacity: .4}
+	to {opacity: 1}
 }
 
 body {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-  overflow-y: scroll; 
-  background: #232526;
-  user-select: none;
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+	overflow-y: scroll; 
+	background: #232526;
+	user-select: none;
 }
 
 body::-webkit-scrollbar {
-    display: none;
+	display: none;
 }
 
 .container {
-  overflow: hidden;
-  opacity: 0.5;
+	overflow: hidden;
+	opacity: 0.5;
 }
 
 .sliding-background {
-  background: url("assets/images/sillylittlecat.awebp") repeat-x;
-  height: 560px;
-  width: 5076px;
-  animation: slide 0.9677419355s linear infinite;
+	background: url("assets/images/sillylittlecat.awebp") repeat-x;
+	height: 560px;
+	width: 5076px;
+	animation: slide 0.9677419355s linear infinite;
 }
 
 .dance {
-  z-index: -99;
-  position: absolute;
-  width: 200px;
-  height: auto;
-  top: 85%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+	z-index: -99;
+	position: absolute;
+	width: 200px;
+	height: auto;
+	top: 85%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .fade {
-  animation-name: fade;
-  animation-duration: 2s;
+	animation-name: fade;
+	animation-duration: 2s;
 }
 
 .slideshow {
-  opacity: 0.3;
-  z-index: -999;
-  max-width: 300px;
-  position: fixed;
-  
+	opacity: 0.3;
+	z-index: -999;
+	max-width: 300px;
+	position: fixed;
+	
 }
 
 h1 {
-  color: #ffffff;
-  font-family: "RujisHandwritingFontv20Medium",;
-  -webkit-animation-name: shake;
-  animation-name: shake;
-  -webkit-animation-duration: 0.5s;
-  animation-duration: 0.5s;
-  -webkit-transform-origin: 50% 50%;
-  transform-origin: 50% 50%;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  text-shadow: -4px -4px 0 #000000, 4px -4px 0 #000000, -4px 4px 0 #000000, 4px 4px 0 #000000;
+	color: #ffffff;
+	font-family: "RujisHandwritingFontv20Medium",;
+	-webkit-animation-name: shake;
+	animation-name: shake;
+	-webkit-animation-duration: 0.5s;
+	animation-duration: 0.5s;
+	-webkit-transform-origin: 50% 50%;
+	transform-origin: 50% 50%;
+	-webkit-animation-iteration-count: infinite;
+	animation-iteration-count: infinite;
+	text-shadow: -4px -4px 0 #000000, 4px -4px 0 #000000, -4px 4px 0 #000000, 4px 4px 0 #000000;
 }
 
 .fakemarquee {
@@ -152,16 +152,16 @@ h1 {
 }
 
 .overlay {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background-color: #000000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  opacity: 1;
-  transition: opacity 0.5s ease-in-out;
-  z-index: 999;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background-color: #000000;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	opacity: 1;
+	transition: opacity 0.5s ease-in-out;
+	z-index: 999;
 }
 
 .stars {
@@ -171,100 +171,101 @@ h1 {
 	position: fixed;
 	top:0%;
 	left:0%;
-	opacity: 0.75;
+	opacity: 1.0;
+	filter: blur(1px);
 	width:100%;
 	height:100%;
 }
 
 .overlay-text {
-  color: #a8a8a8;
-  font-size: 100px;
-  font-weight: bold;
-  text-align: center;
-  text-shadow: 0px 0px 10px #6b6b6a;
-  font-family: "RujisHandwritingFontv20Medium";
-  cursor: pointer;
+	color: #a8a8a8;
+	font-size: 100px;
+	font-weight: bold;
+	text-align: center;
+	text-shadow: 0px 0px 10px #6b6b6a;
+	font-family: "RujisHandwritingFontv20Medium";
+	cursor: pointer;
 }
 
 #explode {
-  width: 80%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: opacity 0.5s ease-in-out;
-  z-index: 999;
+	width: 80%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	transition: opacity 0.5s ease-in-out;
+	z-index: 999;
 }
 
 .left {
-  text-align: center;
-  position: absolute;
-  width: 40%;
-  height: 90%;
-  top: 50%;
-  left: 30%;
-  transform: translate(-50%, -50%);
+	text-align: center;
+	position: absolute;
+	width: 40%;
+	height: 90%;
+	top: 50%;
+	left: 30%;
+	transform: translate(-50%, -50%);
 }
 
 .right {
-  text-align: center;
-  position: absolute;
-  width: 40%;
-  height: 90%;
-  top: 50%;
-  right: 30%;
-  transform: translate(50%, -50%);
+	text-align: center;
+	position: absolute;
+	width: 40%;
+	height: 90%;
+	top: 50%;
+	right: 30%;
+	transform: translate(50%, -50%);
 }
 
 
 .twt {
-  left: 20%;
-  right: 20%;
-  width: auto;
-  height: auto;
-  margin: 0%;
-  position: absolute;
-  text-align: center;
-  -webkit-animation-name: shake;
-  animation-name: shake;
-  -webkit-animation-duration: 0.5s;
-  animation-duration: 0.5s;
-  -webkit-transform-origin: 50% 50%;
-  transform-origin: 50% 50%;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
+	left: 20%;
+	right: 20%;
+	width: auto;
+	height: auto;
+	margin: 0%;
+	position: absolute;
+	text-align: center;
+	-webkit-animation-name: shake;
+	animation-name: shake;
+	-webkit-animation-duration: 0.5s;
+	animation-duration: 0.5s;
+	-webkit-transform-origin: 50% 50%;
+	transform-origin: 50% 50%;
+	-webkit-animation-iteration-count: infinite;
+	animation-iteration-count: infinite;
 }
 
 .info {
-  padding: 10px;
-  background: #15202b;
+	padding: 10px;
+	background: #15202b;
 }
 
 .pfp {
-  width: 100px;
-  border-radius: 50%;
+	width: 100px;
+	border-radius: 50%;
 }
 
 .name {
-  color: #ffffff;
-  font-family: "ChirpBold", sans-serif;
-  font-size: 1.5em;
+	color: #ffffff;
+	font-family: "ChirpBold", sans-serif;
+	font-size: 1.5em;
 }
 
 .at {
-  position: flex;
-  color: #696e72;
-  font-family: "Chirp", sans-serif;
-  font-size: 1em;
+	position: flex;
+	color: #696e72;
+	font-family: "Chirp", sans-serif;
+	font-size: 1em;
 }
 
 .snowflake {
-  z-index: -97;
-  color: #ffffff;
-  font-size: 1em;
-  font-family: Arial, sans-serif;
-  text-shadow: 0 0 5px #000000;
-  opacity: 0.4
+	z-index: -97;
+	color: #ffffff;
+	font-size: 1em;
+	font-family: Arial, sans-serif;
+	text-shadow: 0 0 5px #000000;
+	opacity: 0.4
 }
 
 /* snowflakes */
