--- a/static/soggycat/main.css
+++ b/static/soggycat/main.css
@@ -21,120 +21,139 @@ html, body {
     padding: 0px; 
     margin: 0px;
     overflow: hidden;
-    overflow-x: hidden;
 }
 
 body {
     display: flex;
     justify-content: center;
     align-items: center;
+    
     background: radial-gradient(circle, rgba(86,197,199,1) 0%, rgba(255,239,185,1) 30%, 
                 rgba(188,144,201,1) 53%, rgba(255,154,154,1) 78%, rgba(255,204,95,1) 100%);
 }
 
+/* outperformed by new changes? */
 /* a (hopefully) working fix for mobile.. nest hub and similar are still broken asf */
+/*
 @media screen and (max-width: 480px) {
     #sidemenu {max-width: 80%; overflow-x: hidden}
     #circlebtn {right: 5px; bottom: 5px}
 }
+*/
 
 #soggycat {
-    width: auto;
-    max-width: 75%;
-    height: auto;
-    max-height: 75%;
-    box-shadow: 15px 15px 25px rgb(41, 41, 41, 0.25);
-    border-radius: 1.5%;
+    border-radius: 1.5vh;
+    box-shadow: 1.5vh 1.5vh 3vh rgb(41, 41, 41, 0.25);
+
+    max-width: 75vw;
+    max-height: 75vh;
 }
 
 /* ############################### */
 
 #circlebtn {
-    width: 30px;
-    height: 30px;
-    border-radius: 30px;
-    border-style: none;
-    background-color: rgba(255,255,255, 0.25);
     position: absolute;
-    right: 10px;
-    bottom: 10px;
-    box-shadow: 7px 7px 20px rgb(41, 41, 41, 0.25);
-    -webkit-backdrop-filter: blur(7px);
-    backdrop-filter: blur(7px);
+    right: 1vh;
+    bottom: 1vh;
+
+    background-color: rgba(255,255,255, 0.25);
     cursor: pointer;
+    -webkit-backdrop-filter: blur(3vh);
+    backdrop-filter: blur(3vh);
+    box-shadow: 1vh 2vh 3vh rgb(41, 41, 41, 0.25);
+    
+    width: 4vh;
+    height: 4vh;
+    border-radius: 50%;
+    border-style: none;
+    
+    transition-duration: 230ms;
 }
 
 #circlebtn:hover {
     background-color: rgba(255,255,255, 0.5);
-    width: 35px;
-    height: 35px;
-    border-radius: 32px;
-    transition-duration: 230ms;
+
+    width: 4.5vh;
+    height: 4.5vh;
 }
 
 #circlebtn:active {
-    transform: translateY(5px);
     background-color: rgba(255,255,255, 0.25);
+    transform: translateY(0.5vh) scale(0.95);
+    
     transition-duration: 50ms;
 }
 
 /* ############################### */
 
-#sidemenu {
-    padding-top: 10px;
-    width: 0px;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
-    position:absolute;
+.sm {
+    position: absolute;
     right: 0;
-    bottom: 65px;
-    transition: width 600ms, background-color 200ms, padding 200ms, bottom 200ms;
-    box-shadow: 15px 15px 25px rgb(41, 41, 41, 0.25);
-    -webkit-backdrop-filter: blur(5px);
-    backdrop-filter: blur(5px);
-    background-color: rgba(255,255,255, 0.16);
+    bottom: 6vh;
+
     display: flex;
     flex-direction: column;
+    
+    background-color: rgba(255,255,255, 0.25);
+    border-top-left-radius: 1.0rem;
+    border-bottom-left-radius: 1.0rem;
+    backdrop-filter: blur(3vh);
+    -webkit-backdrop-filter: blur(3vh);
+    box-shadow: 1vh 2vh 3vh rgb(41, 41, 41, 0.25);
+
+    padding: 0.166rem 0.333rem;
+    padding-right: 0;
+    min-width: 10rem;
+    
+    transition-duration: 600ms;
 }
 
-/* #sidemenu:hover {
-    background-color: rgba(255,255,255, 0.27);
-    box-shadow: 15px 17px 27px rgb(41, 41, 41,0.6);
-    padding-top: 15px;
-    padding-bottom: 5px;
-    bottom: 80px;
-} */
+.sm-closed {
+    transform: translateX(100%);
+}
 
-/* ############################### */
+/* Side menu children */
+.sm > * {
+    margin: 0.1666rem 0;
+    margin-right: 0;
 
-.menubuttonsa {
-    margin: 5px;
-    margin-top: 0px;
-    margin-right: 0px;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
+    font-family: 'Spline Sans Mono', monospace;
     text-decoration: none;
     color: black;
+
+    --button-size: 3rem;
+    --text-size: 1.5rem;
+    --hover-size: 0.25rem;
 }
 
-.menubuttons {
-    font-family: 'Spline Sans Mono', monospace;
-    height: 50px;
-    background-color: white;
-    font-size: 20px;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
-    transition-duration: 200ms;
+/* Side menu button presets */
+.sm-small {
+    --button-size: 1.75rem;
+    --text-size: 0.95rem;
+    --hover-size: 0.125rem;
+}
+
+/* Side menu button */
+.sm-button {
     display: flex;
     align-items: center;
     white-space: nowrap;
+
+    background-color: white;
+    border-top-left-radius: 1.25rem;
+    border-bottom-left-radius: 1.25rem;
+    
+    height: var(--button-size);
+    font-size:  var(--text-size);
+
+    transition-duration: 200ms;
 }
 
-.menubuttons:hover {height: 55px; font-size: 25px}
-.menubuttons img {width: 25px; margin: 10px; transition-duration: 200ms}
-.menubuttons:hover img {width: 30px; margin: 11px}
+.sm-button img {
+    height: 50%; margin: 0.5rem; transition-duration: 200ms
+}
 
-.small {height: 30px; font-size: 15px}
-.small:hover {height: 32.5px; font-size: 17.5px}
-.small img {width: 15px}
-.small:hover img {width: 17.5px}
+.sm-button:hover {
+    height: calc(var(--button-size) + var(--hover-size));
+    font-size: calc(var(--text-size) + var(--hover-size));
+}
