--- a/team/assets/static/style.css
+++ b/team/assets/static/style.css
@@ -56,7 +56,7 @@ body {
   top: 0; left: 0; bottom: 0; right: 0;
   width: 150px;
   animation: shake 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) infinite both;
-  z-index: 1900;
+  z-index: 1900; user-select: none;
 }
 .smallsogt {
   position: absolute;
