--- a/team/info/static/sidemenu.css
+++ b/team/info/static/sidemenu.css
@@ -3,7 +3,8 @@
 	font-style: normal;
 	font-weight: 400;
 	font-display: swap;
-	src: url("/static/other/spline.woff2") format('woff2');
+	src: url("https://soggy.cat/static/other/spline.woff2") format('woff2');
+	/* eslint: disable */
 	unicode-range: U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304, U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 
@@ -12,72 +13,29 @@
 	font-style: normal;
 	font-weight: 400;
 	font-display: swap;
-	src: url("/static/other/spline2.woff2") format('woff2');
+	src: url("https://soggy.cat/static/other/spline2.woff2") format('woff2');
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
-
-html, body {
-	height: 100%; 
-	padding: 0px; 
-	margin: 0px;
-	overflow: hidden;
-}
-
-body {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	
-	background: radial-gradient(circle, rgba(86,197,199,1) 0%, rgba(255,239,185,1) 30%, 
-				rgba(188,144,201,1) 53%, rgba(255,154,154,1) 78%, rgba(255,204,95,1) 100%);
-}
-
-/* outperformed by new changes? */
-/* a (hopefully) working fix for mobile.. nest hub and similar are still broken asf */
-/*
-@media screen and (max-width: 480px) {
-	#sidemenu {max-width: 80%; overflow-x: hidden}
-	#circlebtn {right: 5px; bottom: 5px}
-}
-*/
-
-#soggycat {
-	border-radius: 1.5vh;
-	box-shadow: 1.5vh 1.5vh 3vh rgb(41, 41, 41, 0.25);
-
-	max-width: 75vw;
-	max-height: 75vh;
-}
-
-/* IMPORTANT!!!
-IMPORTANT!!
-READ THIS!!
-DO NOT SKIP PAST THIS!!
-GENUINELY!!
-
-IF YOU WANT TO CHANGE ANYTHING BELOW THIS.
-YOU SHOULD INSTEAD GO TO sidemenu.css,
-DELETE EVERYTHING BELOW HERE, AND PORT ALL OF IT OVER TO THE NEW SEPARATE SIDEMENU CODE & STYLING!!
-DONT REPEAT YOURSELF!!!!!!
 
 /* ############################### */
 
 #circlebtn {
-	position: absolute;
+	padding: 0;
+	position: fixed;
 	right: 1vh;
 	bottom: 1vh;
 
 	background-color: rgba(255,255,255, 0.25);
 	cursor: pointer;
-	-webkit-backdrop-filter: blur(3vh);
-	backdrop-filter: blur(3vh);
+
+	backdrop-filter: blur(0.175rem);
 	box-shadow: 1vh 2vh 3vh rgb(41, 41, 41, 0.25);
-	
+
 	width: 4vh;
 	height: 4vh;
 	border-radius: 50%;
 	border-style: none;
-	
+
 	transition-duration: 230ms;
 }
 
@@ -91,31 +49,31 @@ DONT REPEAT YOURSELF!!!!!!
 #circlebtn:active {
 	background-color: rgba(255,255,255, 0.25);
 	transform: translateY(0.5vh) scale(0.95);
-	
+
 	transition-duration: 50ms;
 }
 
 /* ############################### */
 
 .sm {
-	position: absolute;
+	position: fixed;
 	right: 0;
 	bottom: 6vh;
 
 	display: flex;
 	flex-direction: column;
-	
+
 	background-color: rgba(255,255,255, 0.25);
 	border-top-left-radius: 1.0rem;
 	border-bottom-left-radius: 1.0rem;
-	backdrop-filter: blur(3vh);
-	-webkit-backdrop-filter: blur(3vh);
+	backdrop-filter: blur(0.175rem);
+
 	box-shadow: 1vh 2vh 3vh rgb(41, 41, 41, 0.25);
 
 	padding: 0.166rem 0.333rem;
 	padding-right: 0;
 	min-width: 10rem;
-	
+
 	transition-duration: 600ms;
 	max-width: 100%;
 }
@@ -128,6 +86,7 @@ DONT REPEAT YOURSELF!!!!!!
 
 /* Side menu children */
 .sm > * {
+	cursor: pointer;
 	margin: 0.1666rem 0;
 	margin-right: 0;
 
@@ -150,13 +109,14 @@ DONT REPEAT YOURSELF!!!!!!
 /* Side menu button */
 .sm-button {
 	display: flex;
+	flex-direction: row;
 	align-items: center;
 	white-space: nowrap;
 
 	background-color: white;
 	border-top-left-radius: 1.25rem;
 	border-bottom-left-radius: 1.25rem;
-	
+
 	height: var(--button-size);
 	font-size:  var(--text-size);
 
@@ -164,7 +124,16 @@ DONT REPEAT YOURSELF!!!!!!
 }
 
 .sm-button img {
-	height: 50%; margin: 0.5rem; transition-duration: 200ms
+	height: 50%;
+	margin: 0.5rem;
+	margin-right: 0;
+	transition-duration: 200ms;
+}
+
+.sm-button p {
+	margin: unset;
+	margin-left: 0.5rem;
+	margin-right: 0.5rem;
 }
 
 .sm-button:hover {
