--- a/static/soggycat/main.css
+++ b/static/soggycat/main.css
@@ -16,14 +16,18 @@
 	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+:root {
+	color-scheme: light;
+}
 html, body {
 	height: 100%; 
 	padding: 0px; 
 	margin: 0px;
-	overflow: hidden;
 }
 
 body {
+	overflow: hidden;
+	overscroll-behavior: none;
 	display: flex;
 	justify-content: center;
 	align-items: center;
