more support for mobile + contribution changes
this is a big change and may break some stuff. finally though!! separated sidemenu!!!

--- a/billy/billy.css
+++ b/billy/billy.css
@@ -1,3 +1,7 @@
-body{
+body {
+    background-color: #c6b192;
+}
+
+.gradient-background {
     background: radial-gradient(circle, rgb(28,15,7) 20%, rgb(198,177,146) 100%);
 }
