--- a/static/soggycat/sidemenu.css
+++ b/static/soggycat/sidemenu.css
@@ -1,113 +1,156 @@
-
-/* ############################### */
-
 #circlebtn {
-    position: absolute;
-    right: 1vh;
-    bottom: 1vh;
+	padding: 0;
+	position: fixed;
+	right: calc(env(safe-area-inset-right) / 2 + 1vh);
+	bottom: calc(env(safe-area-inset-bottom) / 2 + 1vh);
 
-    background-color: rgba(255,255,255, 0.25);
-    cursor: pointer;
-    -webkit-backdrop-filter: blur(3vh);
-    backdrop-filter: blur(3vh);
-    box-shadow: 1vh 2vh 3vh rgb(41, 41, 41, 0.25);
-    
-    width: 4vh;
-    height: 4vh;
-    border-radius: 50%;
-    border-style: none;
-    
-    transition-duration: 230ms;
+	background-color: rgba(255,255,255, 0.25);
+	cursor: pointer;
+
+	backdrop-filter: blur(0.175rem);
+	box-shadow: 1vh 2vh 3vh rgb(41, 41, 41, 0.25);
+
+	width: 3vmin;
+	height: 3vmin;
+	border-radius: 50%;
+	border-style: none;
+
+	transition-duration: 230ms;
 }
 
-#circlebtn:hover {
-    background-color: rgba(255,255,255, 0.5);
+@media (hover: hover) {
+	#circlebtn:hover {
+		background-color: rgba(255,255,255, 0.5);
 
-    width: 4.5vh;
-    height: 4.5vh;
+		width: 3.5vmin;
+		height: 3.5vmin;
+	}
 }
 
 #circlebtn:active {
-    background-color: rgba(255,255,255, 0.25);
-    transform: translateY(0.5vh) scale(0.95);
-    
-    transition-duration: 50ms;
+	background-color: rgba(255,255,255, 0.25);
+	transform: translateY(0.5vh) scale(0.95);
+
+	transition-duration: 50ms;
 }
 
 /* ############################### */
 
 .sm {
-    position: absolute;
-    right: 0;
-    bottom: 6vh;
+	position: fixed;
+	right: 0;
+	bottom: calc(env(safe-area-inset-bottom) + 5vh);
 
-    display: flex;
-    flex-direction: column;
-    
-    color: black;
-    background-color: rgba(255,255,255, 0.25);
-    border-top-left-radius: 1.0rem;
-    border-bottom-left-radius: 1.0rem;
-    backdrop-filter: blur(3vh);
-    -webkit-backdrop-filter: blur(3vh);
-    box-shadow: 1vh 2vh 3vh rgb(41, 41, 41, 0.25);
+	will-change: transform;
+	display: flex;
+	flex-direction: column;
 
-    padding: 0.166rem 0.333rem;
-    padding-right: 0;
-    min-width: 10rem;
-    
-    transition-duration: 600ms;
-    max-width: 100%;
+	background-color: rgba(255,255,255, 0.25);
+	border-top-left-radius: 1.0rem;
+	border-bottom-left-radius: 1.0rem;
+	backdrop-filter: blur(0.175rem);
+
+	box-shadow: 1vh 2vh 3vh rgb(41, 41, 41, 0.25);
+
+	padding: 0.166rem 0.333rem;
+	padding-right: 0;
+	min-width: 10rem;
+
+	transition-duration: 600ms;
+	max-width: 100%;
+}
+
+.disappointment > .sm-button {
+	width: 310px !important;
+	height: auto !important;
+	border-bottom-left-radius: 0.3rem !important;
+	border-top-left-radius: 0.3rem !important;
+}
+
+@media (max-width: 1100px) {
+	.disappointment {
+		display: none !important;
+		height: 0 !important;
+		margin: 0 !important;
+		padding: 0 !important;
+	}
+
+	#circlebtn {
+		width: 9vmin;
+		height: 9vmin;
+	}
+
+	.sm {
+		bottom: calc(env(safe-area-inset-bottom) / 2 + 12.25vmin);
+	}
+
+	@media (hover: hover) {
+		#circlebtn:hover {
+			width: 9.5vmin;
+			height: 9.5vmin;
+		}
+	}
 }
 
 .sm-closed {
-    transform: translateX(100%);
-    visibility: hidden;
-    pointer-events: none;
+	transform: translateX(100%);
+	visibility: hidden;
+	pointer-events: none;
 }
 
 /* Side menu children */
 .sm > * {
-    margin: 0.1666rem 0;
-    margin-right: 0;
+	cursor: pointer;
+	margin: 0.1666rem 0;
+	margin-right: 0;
 
-    font-family: 'Spline Sans Mono', monospace;
-    text-decoration: none;
-    color: black;
+	font-family: 'Spline Sans Mono', monospace;
+	text-decoration: none;
+	color: black;
 
-    --button-size: 3rem;
-    --text-size: 1.5rem;
-    --hover-size: 0.25rem;
+	--button-size: 3rem;
+	--text-size: 1.5rem;
+	--hover-size: 0.25rem;
 }
 
 /* Side menu button presets */
 .sm-small {
-    --button-size: 1.75rem;
-    --text-size: 0.95rem;
-    --hover-size: 0.125rem;
+	--button-size: 1.75rem;
+	--text-size: 0.95rem;
+	--hover-size: 0.125rem;
 }
 
 /* Side menu button */
 .sm-button {
-    display: flex;
-    align-items: center;
-    white-space: nowrap;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	white-space: nowrap;
 
-    background-color: white;
-    border-top-left-radius: 1.25rem;
-    border-bottom-left-radius: 1.25rem;
-    
-    height: var(--button-size);
-    font-size:  var(--text-size);
+	background-color: white;
+	border-top-left-radius: 1.25rem;
+	border-bottom-left-radius: 1.25rem;
 
-    transition-duration: 200ms;
+	height: var(--button-size);
+	font-size:  var(--text-size);
+
+	transition-duration: 200ms;
 }
 
 .sm-button img {
-    height: 50%; margin: 0.5rem; transition-duration: 200ms
+	height: 50%;
+	margin: 0.5rem;
+	margin-right: 0;
+	transition-duration: 200ms;
+}
+
+.sm-button p {
+	margin: unset;
+	margin-left: 0.5rem;
+	margin-right: 0.5rem;
 }
 
 .sm-button:hover {
-    height: calc(var(--button-size) + var(--hover-size));
-    font-size: calc(var(--text-size) + var(--hover-size));
+	height: calc(var(--button-size) + var(--hover-size));
+	font-size: calc(var(--text-size) + var(--hover-size));
 }
