--- a/website/team/team.css
+++ b/website/team/team.css
@@ -48,7 +48,7 @@ body {
 .flash {
   opacity: 0; position: fixed;
   top: 0; bottom: 0; left: 0; right: 0;
-  background-color: white;
+  background-color: lightgray;
   pointer-events: none; z-index: 2000;
 }
 .smallsog {
@@ -228,19 +228,23 @@ a {
   font-family: 'Brush Script MT', cursive;
   font-size: 22px;
 }
-.cocaine {
-  outline: solid 1px red;
-  position: fixed; top: 0; left: 0;
-  width: 100%; height: 100%;
-  z-index: 999; display: none;
-  object-fit: fill;
-}
 
-.bg {
+#cocaine {
+  outline: solid 1px red;
   position: fixed;
   top: 0; left: 0;
   width: 100%; height: 100%;
-  object-fit: cover; z-index: -99;
+  z-index: 999;
+  object-fit: fill;
+  display: none;
+}
+
+#video-background {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  z-index: -999;
+  object-fit: cover;
 }
 
 .song {
